[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "hebg"
authors = [
    { name = "Mathïs Fédérico" },
    { name = "Mathïs Fédérico", email = "mathfederico@gmail.com" },
]
description = "HEBG: Hierarchial Explainations of Behavior as Graph"
dynamic = ["version", "readme", "dependencies"]
license = { text = "GPLv3 license" }
requires-python = ">=3.7"

[project.urls]
repository = "https://github.com/IRLL/HEB_graphs"

[tool.setuptools]
license-files = ['LICEN[CS]E*', 'COPYING*', 'NOTICE*', 'AUTHORS*']

[project.scripts]

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]

[tool.mypy]
files = "hebg"
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
no_implicit_optional = true
no_implicit_reexport = false
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
